# simple_db

./: .gitignore  README.md  main.c  meson.build
.github/workflows/: ci.yml
include/: math.h  minunit.h
tests/: test_math.c
